# ferrum

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  work_log.md
compiler/: Cargo.toml
compiler/src/: main.rs  side_load.rs
compiler/src/ast/: mod.rs  nodes.rs
compiler/src/codegen/: context.rs  mod.rs  name_mangler.rs  rust_emit.rs  type_map.rs
compiler/src/diagnostics/: reporter.rs
compiler/src/lexer/: lexer.rs  mod.rs  token.rs
compiler/src/parser/: parser.rs
compiler/src/semantic/: declaration_collector.rs  device_checker.rs  diagnostic.rs  mod.rs  ownership.rs  symbol_table.rs  type_checker.rs
compiler/src/types/: mod.rs
examples/: 01_blink.fe  02_button_toggle.fe  03_traffic_light.fe  04_soil_moisture.fe  05_temperature_display.fe  06_rgb_mood_lamp.fe  07_distance_alarm.fe  README.md  fun_controller.fe
runtime/: Cargo.toml
runtime/src/: debounce.rs  lib.rs  scheduler.rs  traits.rs
runtime/src/boards/: microbit_v2.rs  mod.rs  rp2040.rs
spec/: ferrum_grammar_v1.3.ebnf  ferrum_spec_v1.3.md
stdlib/: Cargo.toml
stdlib/src/: arrays.rs  convert.rs  format.rs  lib.rs  math.rs  strings.rs
